--- a/less/index.less
+++ b/less/index.less
@@ -1,4 +1,6 @@
 @import 'main.less';
-@import 'mixins.less';
 @import 'about.less';
+
+//Vars and Mixins
 @import 'variable.less';
+@import 'mixins.less';
