--- a/less/main.less
+++ b/less/main.less
@@ -25,38 +25,32 @@ html {
     font-size: 1.6rem;
     line-height: 1.4;
   }
+
   .container {
     max-width: 800px;
     width: 100%;
     margin: 0 auto;
-  }
-  
+    background-color: white;
   .containnav {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
-    background-color:white;
-    border: 1px double #e0e0e0;
-    max-width: 100%;
-    width: 100%;
+    .nav-container;
   }
   .containnav a {
     text-decoration: none;
     font-size: 3rem;
     color: black;
   }
+    }
   .containnav h1 {
     font-size: 4rem;
-  }
   .containnav nav {
     display: flex;
     justify-content: space-evenly;
     max-width: 100%;
+}
   }
-  .rachel-rey{
-    display: flex;
-    justify-content: center;
+ .rachel-rey{
+  display: flex;
+  justify-content: center;
   }
   footer {
     color: #22283B;
@@ -70,10 +64,8 @@ html {
   }
   .home .intro h2 {
     padding: 15px;
-  }
   .home .intro p {
     padding: 0 15px;
-  }
   .home .cake-images {
     display: flex;
     flex-wrap: wrap;
@@ -81,12 +73,12 @@ html {
     align-items: center;
     width: 100%;
     .blast{
-       width: 28%;
+    width: 28%;
     margin: 20px 2.5%;
     border-radius: 20px;
     height: 100%;
     }
-  }
+  
   .home .cake-images img {
     width: 60%;
     margin: 20px 2.5%;
@@ -119,10 +111,9 @@ html {
     margin-bottom: 26px;
   }
   .home .walk .walk-text .btn {
-    font-size: 1.5rem;
+    .some-class;
     border-radius: 4px;
     background-color: black;
-    color: white;
     padding: 5px;
     width: 25%;
   }
@@ -135,7 +126,10 @@ html {
     height: auto;
     margin: 0 auto;
   }
-    
+    }
+      } 
+        }
+          
   #txt{
     display: flex;
     font-size: 4rem;
@@ -145,20 +139,20 @@ html {
         @media (max-width: 500px){
         flex-direction: column;
      }
-    }
     .bork{
       @media (max-width: 500px){
        display: none;
      }
-    }
     .blast{
       @media (max-width: 500px){
        display: none;
      }
-    }
     .sky{
       @media (max-width: 500px){
         max-width: 100%;
         width: 300px;
+              }
+           }
+         }       
       }
     }
