--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,9 +1,14 @@
-.body-text(font-color){
-    color: font-color;
+.some-class{
+    font-size: 1.5rem;
+    color: white; 
 }
-.font-3(font-size){
-    font-size: font-size;
-}
-.body-font(font-family){
-    font-family: font-family;
+.nav-container{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    background-color:white;
+    border: 1px double #e0e0e0;
+    max-width: 100%;
+    width: 100%;
 }
