added mixins and variables

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,13 +2,9 @@
     font-size: 1.5rem;
     color: white; 
 }
-.nav-container{
+.nav-contain{
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
-    background-color:white;
-    border: 1px double #e0e0e0;
-    max-width: 100%;
-    width: 100%;
 }
