--- a/css/index.css
+++ b/css/index.css
@@ -363,13 +363,9 @@ form {
   font-size: 1.5rem;
   color: white;
 }
-.nav-container {
+.nav-contain {
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-  background-color: white;
-  border: 1px double #e0e0e0;
-  max-width: 100%;
-  width: 100%;
 }
