--- a/less/main.less
+++ b/less/main.less
@@ -25,14 +25,17 @@ html {
     font-size: 1.6rem;
     line-height: 1.4;
   }
-
   .container {
     max-width: 800px;
     width: 100%;
     margin: 0 auto;
     background-color: white;
   .containnav {
-    .nav-container;
+    .nav-contain();
+    background-color:white;
+    border: 1px double #e0e0e0;
+    max-width: 100%;
+    width: 100%;
   }
   .containnav a {
     text-decoration: none;
@@ -41,7 +44,7 @@ html {
   }
     }
   .containnav h1 {
-    font-size: 4rem;
+    font-size: @containh1;
   .containnav nav {
     display: flex;
     justify-content: space-evenly;
