--- a/css/index.css
+++ b/css/index.css
@@ -203,6 +203,10 @@ p {
   width: 100%;
 }
 .containnav a {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
   font-size: 3rem;
   color: black;
