--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,9 +2,6 @@
     font-size: 1.5rem;
     color: white; 
 }
-.nav-contain{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: center;
+.padding{
+    padding: 15px;
 }
