--- a/less/main.less
+++ b/less/main.less
@@ -56,9 +56,7 @@ a{
     
 }
 @media (max-width: 500px){
-    .topnav{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    .topnav a{
+        color: black;
     }
 }
